# cookiecutter-hx-pycli

./: README.rst
{{cookiecutter.project_slug}}/: LICENSE  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  logs.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/requirements/: base.txt  test.txt
